# dyn-cpg-rs

./: README.md  differ.py  requirements.txt
bvc-exps/: cfg.py  (+1 more)
dyn-cpg-rs/: .gitignore  Cargo.toml  TODO  chat.md  dashboard.py  profiler.sh  sexp-diff.py  treefmt.toml
dyn-cpg-rs/features/: graph_operations.feature  incremental_updates.feature  semantic_equivalence.feature
dyn-cpg-rs/program_analysis/: property_based_tests.md  unit_tests.md
dyn-cpg-rs/repos/metrics/: graphviz-500.csv  incremental_vs_full_by_edits.pgf.aux  summary_table.csv  summary_table.tex  summary_table_general.csv  summary_table_general.tex  textual_analysis.txt  tree-sitter-10.csv  tree-sitter-10_profile.txt  tree-sitter-500.csv  tree-sitter-500_profile.txt
dyn-cpg-rs/samples/: constructs.c  large_sample.new.c  large_sample.old.c  sample1.old.c  stmt-del.new.c  stmt-del.old.c
dyn-cpg-rs/seq_patches/: analyse.py
dyn-cpg-rs/seq_patches/large_sample_9/: 001_delete-stmt_fn-'msm_free_diff_result'-delete-from-b1023.patch  002_insert-decl_fn-'msm_diff'-insert-at-288390.patch  003_rename-local_fn-'compare_char_seq'-rename-'prev_b'-to-'new_prev_b_234063'.patch  004_modify-num-lit_0-to-5.patch  005_add-comment_fn-'msm_free_diff_result'.patch  006_delete-stmt_fn-'msm_proc_raw_diffs'-delete-from-b19688.patch  007_insert-decl_fn-'msm_free_diff_result'-insert-at-619177.patch  008_rename-local_fn-'msm_proc_raw_diffs'-rename-'start_a'-to-'new_start_a_33336'.patch  base.c  metrics.csv
dyn-cpg-rs/seq_patches/large_sample_99/: 001_delete-stmt_fn-'msm_diff_generic'-delete-from-b3342.patch  002_insert-decl_fn-'msm_substr_from_str'-insert-at-969298.patch  003_rename-local_fn-'msm_proc_raw_diffs'-rename-'segment'-to-'new_segment_765913'.patch  004_modify-num-lit_1-to-6.patch  005_add-comment_fn-'compare_char_seq'.patch  006_delete-stmt_fn-'msm_add_dff_segment'-delete-from-b1173.patch  007_insert-decl_fn-'msm_free_lines'-insert-at-154446.patch  (+92 more)
dyn-cpg-rs/src/: cli.rs  cpg.rs  lib.rs  main.rs  parser.rs  resource.rs
dyn-cpg-rs/tests/: behavior_tests.rs  cli.rs  cpg_comparison.rs  debug_treesitter.rs  incremental_parsing.rs  language_constructs.rs  language_integration.rs  metrics.rs  minimal_identifier_update.rs  old_cpg_tests.rs  single_update_issue.rs
dyn-cpg-rs/tools/: analyse_git_metrics.py  analyse_metrics.py  analyse_patch_metrics.py  check_mapping_presence.py  debug_find.py  extract_rebuild_blocks.py  patchgen.py  sem-sexp-diff.py
(+55 files in other folders)
