[package]
name = "dyn-cpg-rs"
version = "0.1.0"
edition = "2024"
authors = ["Dylan Kirby <25853805@sun.ac.za>"]
description = "A dynamic CPG for Rust"

[dependencies]
gremlin-client = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
strum = "0.24"
strum_macros = "0.24"
glob = "0.3"
url = "2.3"
tree-sitter = "0.25.4"
tree-sitter-c = "0.23.4"
tree-sitter-python = "0.23.6"
tree-sitter-java = "0.23.5"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"