[package]
name = "dyn-cpg-rs"
version = "0.1.0"
edition = "2024"
authors = ["Dylan Kirby <25853805@sun.ac.za>"]
description = "A dynamic CPG for Rust"
publish = false

[dependencies]
gremlin-client = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
strum = "0.24"
strum_macros = "0.24"
glob = "0.3"
url = "2.3"
git2 = "0.20.2"
tree-sitter = "0.25.4"
tree-sitter-c = "0.23.4"
tree-sitter-python = "0.23.6"
tree-sitter-java = "0.23.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
enum_dispatch = "0.3.13"
blake3 = "1.8.2"
once_cell = "1.21.3"
thiserror = "2.0.12"
similar = "2.7.0"
slotmap = "1.0.7"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
